crates/libs/frieze/tests/ui/enum_tuple_variant_n2.stderr
error: frieze: tuple variants with multiple fields (variant `Point` has 2) are not supported. Define a named newtype struct: #[derive(Schema)] struct Point { ... }; enum Bad { Point(Point), ... }.
 --> tests/ui/enum_tuple_variant_n2.rs:7:5
  |
7 |     Point(i32, i32),
  |     ^^^^^^^^^^^^^^^
